demoNative_empty_work/platforms/ios/build/device/metadata-generation-stderr-armv7.txt
clang version 3.9.0 (tags/RELEASE_390/final)
Target: arm-apple-darwin16.1.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "clang-tool" "-cc1" "-triple" "thumbv7-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "cortex-a8" "-target-feature" "+soft-float-abi" "-target-abi" "apcs-gnu" "-mfloat-abi" "soft" "-target-linker-version" "264.3.102" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/3.9.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk" "-I" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device/include" "-I" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal/" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/../../lib/iOS" "-F../../lib/iOS" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fallow-half-arguments-and-returns" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fsjlj-exceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

ignoring nonexistent directory "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device/include"
ignoring nonexistent directory "../../lib/iOS"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device (framework directory)
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal (framework directory)
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/../../lib/iOS (framework directory)
 ../lib/clang/3.9.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/System/Library/Frameworks (framework directory)
End of search list.
clang version 3.9.0 (tags/RELEASE_390/final)
Target: arm-apple-darwin16.1.0
Thread model: posix
InstalledDir: 
clang Invocation:
 "objc-metadata-generator" "-cc1" "-triple" "thumbv7-apple-ios8.0.0" "-fsyntax-only" "-disable-free" "-disable-llvm-verifier" "-discard-value-names" "-main-file-name" "umbrella.h" "-mrelocation-model" "pic" "-pic-level" "2" "-mthread-model" "posix" "-mdisable-fp-elim" "-masm-verbose" "-target-cpu" "cortex-a8" "-target-feature" "+soft-float-abi" "-target-abi" "apcs-gnu" "-mfloat-abi" "soft" "-target-linker-version" "264.3.102" "-v" "-dwarf-column-info" "-debugger-tuning=lldb" "-resource-dir" "../lib/clang/3.9.0" "-isysroot" "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk" "-I" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device/include" "-I" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal/" "-F/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/../../lib/iOS" "-F../../lib/iOS" "-D" "DEBUG=1" "-Wno-unknown-pragmas" "-Wno-ignored-attributes" "-Wno-nullability-completeness" "-Wno-expansion-to-defined" "-std=gnu99" "-fdebug-compilation-dir" "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal/metadata-generator/bin" "-ferror-limit" "0" "-fmessage-length" "0" "-stack-protector" "1" "-fallow-half-arguments-and-returns" "-fblocks" "-fimplicit-module-maps" "-fobjc-runtime=ios-8.0.0" "-fencode-extended-block-signature" "-fobjc-exceptions" "-fexceptions" "-fsjlj-exceptions" "-fmax-type-align=16" "-fdiagnostics-show-option" "-x" "objective-c" "umbrella.h"

clang -cc1 version 3.9.0 based upon LLVM 3.9.0 default target x86_64-apple-darwin16.1.0
ignoring nonexistent directory "/Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device/include"
ignoring nonexistent directory "../../lib/iOS"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/build/device (framework directory)
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/internal (framework directory)
 /Users/maxim/Appsflyer/projects/nativescript-plugin-appsflyer/demoNative/platforms/ios/../../lib/iOS (framework directory)
 ../lib/clang/3.9.0/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from umbrella.h:644:
/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS10.1.sdk/usr/include/os/log.h:35:2: error: using os/log.h requires Xcode 8 or later
#error using os/log.h requires Xcode 8 or later
 ^
1 error generated.
